--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         </div>
 
         <div id="interaction">
-            <input type="button" value="começar" onclick="controls.active()"> 
+            <input type="button" value="começar" onclick="active()"> 
 
-            <input type="button" value="parar" onclick="controls.stop()">
+            <input type="button" value="parar" onclick="stop()">
             
-            <input type="button" value="reiniciar"> 
+            <input type="button" value="reiniciar" onclick="refresh()"> 
         </div>
     </main>
     <script src="script.js"></script>
