--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
     <main>
 
-        <div id='cronometro'>
+        <div id='cronometro' onclick="controls.stop()">
             <img src="imagens/66175.png" alt="">
             <div id="resposta">0:0</div>
         </div>
